--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>prosopopeya</h4>
-        
+        <h4>RAMLOZ</h4>
+        <h4>ver proyectos</h4>
+        <h4>Menu</h4>
       </div>
     </div>
   </div>
