--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
+
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/mystyles.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -31,12 +35,19 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+  <div class="container_1">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>RAMLOZ</h4>
-        <h4>ver proyectos</h4>
-        <h4>Menu</h4>
+      <div class="four columns">
+        <p class="main-title">RAMLOZ</p>
+        ver proyectos
+      </div>
+      <div class="four columns">
+        industrial designer
+      </div>
+        <div class="four columns">
+        <h4>menu</h4>
+      </div>
+        
       </div>
     </div>
   </div>
