--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
         <p class="main-title">RAMLOZ</p>
         ver proyectos
       </div>
-      <div class="four columns">
+      <div class="six columns">
         industrial designer
       </div>
-        <div class="four columns">
-        <h4>menu</h4>
+        <div class="two columns">
+        <p class="menu rotate">menu</p>
       </div>
+      
         
       </div>
     </div>
