--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="six columns">
         industrial designer
       </div>
-        <div class="two columns">
-        <p class="menu rotate">menu</p>
+        <div class="two columns menu ">
+        <p class="rotate menu-text">menu</p>
       </div>
       
         
